test/ui/src/compile_fail/std/template_non_fv_hole.rs
fn main() {
    emit::emit!("template {true}");
}
